--- a/src/components/index.html
+++ b/src/components/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
-	<link rel="icon" type="image/png" href="../assets/img/favicon.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="../../assets/img/apple-icon.png">
+	<link rel="icon" type="image/png" href="../../assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 	<title>Missingzone.pk</title>
@@ -16,11 +16,11 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
 	<!-- CSS Files -->
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../assets/css/material-kit.css" rel="stylesheet"/>
+    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../../assets/css/material-kit.css" rel="stylesheet"/>
 
 	<!-- CSS Just for demo purpose, don't include it in your project -->
-	<link href="../assets/css/demo.css" rel="stylesheet" />
+	<link href="../../assets/css/demo.css" rel="stylesheet" />
 
 </head>
 
@@ -47,7 +47,7 @@
 	    <div class="collapse navbar-collapse" id="navigation-index">
 	    	<ul class="nav navbar-nav navbar-right">
 				<li>
-					<a href="../theme/components-documentation.html" target="_blank">
+					<a href="../../theme/components-documentation.html" target="_blank">
 						<i class="material-icons">search</i> Find One
 					</a>
 				</li>
@@ -63,7 +63,7 @@
 <!-- End Navbar -->
 
 <div class="wrapper">
-	<div class="header header-filter" style="background-image: url('../assets/logo.png');">
+	<div class="header header-filter" style="background-image: url('../../assets/logo.png');">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
@@ -187,7 +187,7 @@
 			<!--</div>-->
 		<!--</div>-->
 
-		<div class="section section-full-screen section-signup" style="background-image: url('../assets/img/city.jpg'); background-size: cover; background-position: top center; min-height: 700px;">
+		<div class="section section-full-screen section-signup" style="background-image: url('../../assets/img/city.jpg'); background-size: cover; background-position: top center; min-height: 700px;">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4">
@@ -260,18 +260,18 @@
 
 </body>
 	<!--   Core JS Files   -->
-	<script src="../assets/js/jquery.min.js" type="text/javascript"></script>
-	<script src="../assets/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="../assets/js/material.min.js"></script>
+	<script src="../../assets/js/jquery.min.js" type="text/javascript"></script>
+	<script src="../../assets/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="../../assets/js/material.min.js"></script>
 
 	<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-	<script src="../assets/js/nouislider.min.js" type="text/javascript"></script>
+	<script src="../../assets/js/nouislider.min.js" type="text/javascript"></script>
 
 	<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-	<script src="../assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
+	<script src="../../assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
 
 	<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-	<script src="../assets/js/material-kit.js" type="text/javascript"></script>
+	<script src="../../assets/js/material-kit.js" type="text/javascript"></script>
 
 	<script type="text/javascript">
 
