create register page1

--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -20,7 +20,7 @@
 }
 .tim-typo .tim-note{
     bottom: 10px;
-    color: #c0c1c2;
+    color #c0c1c2;
     display: block;
     font-weight: 400;
     font-size: 13px;
