--- a/src/components/main.html
+++ b/src/components/main.html
@@ -6,18 +6,18 @@
 	<link rel="icon" type="image/png" href="../../assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>MissingZone.Pk</title>
+	<title>Missingzone.pk</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
 	<!--     Fonts and icons     -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
 	<!-- CSS Files -->
-    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../../assets/css/material-kit.css" rel="stylesheet"/>
+	<link href="../../assets/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="../../assets/css/material-kit.css" rel="stylesheet"/>
 
 	<!-- CSS Just for demo purpose, don't include it in your project -->
 	<link href="../../assets/css/demo.css" rel="stylesheet" />
@@ -28,44 +28,36 @@
 <!-- Navbar -->
 <nav class="navbar navbar-transparent navbar-fixed-top navbar-color-on-scroll">
 	<div class="container">
-        <div class="navbar-header">
-	    	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-index">
-	        	<span class="sr-only">Toggle navigation</span>
-	        	<span class="icon-bar"></span>
-	        	<span class="icon-bar"></span>
-	        	<span class="icon-bar"></span>
-	    	</button>
-	    	<a href="javascrit:">
-	        	<div class="logo-container">
-	                <div class="brand">
-						<b style="font-size:20px; " >Missingzone</b>
-	                </div>
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-index">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a href="javascrit:">
+				<div class="logo-container">
+					<div class="brand">
+						<b>Missingzone</b>
+					</div>
 				</div>
-	      	</a>
-	    </div>
+			</a>
+		</div>
 
-	    <div class="collapse navbar-collapse" id="navigation-index">
-	    	<ul class="nav navbar-nav navbar-right">
+		<div class="collapse navbar-collapse" id="navigation-index">
+			<ul class="nav navbar-nav navbar-right">
 				<li>
-<<<<<<< HEAD:src/main.html
-
-					<a href="#signup" >
-
-				
-
-=======
 					<a href="../../theme/components-documentation.html" target="_blank">
->>>>>>> 0860dc7791dd310e6fd3ebabe14bb13177cb6001:src/components/main.html
 						<i class="material-icons">search</i> Find One
 					</a>
 				</li>
 				<li>
 					<a href="http://demos.creative-tim.com/material-kit-pro/presentation.html?ref=utp-freebie" target="_blank">
-						<i class="material-icons">person</i>  Register your Missing One
+						<i class="material-icons">mic</i> Register your Missing One
 					</a>
 				</li>
-	    	</ul>
-	    </div>
+			</ul>
+		</div>
 	</div>
 </nav>
 <!-- End Navbar -->
@@ -84,79 +76,55 @@
 		</div>
 	</div>
 	<div class="main main-raised">
-	
-				
-			
-									
-		<!--</div>-->
 		<div class="section">
 			<div class="container">
 				<div class="row tim-row">
-					<h2 class="text-center" style="font-size:37px; font-family:'Arial Rounded MT Bold';">Short Description and Usage</h2>
+					<h2 class="text-center">Short Description and Usage</h2>
 					<legend></legend>
 					<div class="col-md-8 col-md-offset-2">
-						<p>
-							<p style="font-size:20px; text-transform:capitalize; text-align:center; font-family:'Cambria'">Missingzone.Pk</p><p style="font-size:20px;text-transform:capitalize; text-align:center; font-family:'Cambria'"> The Purpose Of This Platform Is Help To Find The Missing People Of Pakistan.If You lost your brother, sister. . etc.So You Can Easily Find Them In Our Platform And If U Can Help Missed Person So You Also Include Them Information On Our Platform To Help Them. ThankYou .</p>
-						
+						<h4>
+							<b>Missingzone.Pk</b> The Purpose Of This Platform Is Help To Find The Missing People Of Pakistan.
+							<br>
+							If You lost your <code><b>brother, sister etc..</b></code> So You Can Easily Find Them In Our Platform
+						</h4>
+						<br>
+						<h4>
+							If U Can Help Missed Person So You Also Include Them Information On Our Platform To Help Them.
+							ThankYou.
+						</h4>
 					</div>
-			  </div>
+				</div>
 				<div class="row tim-row">
-					<h2 class="text-center" style="font-size:37px; font-family:'Arial Rounded MT Bold';">Basic Requirement</h2>
+					<h2 class="text-center">Basic Requirement</h2>
 					<legend></legend>
 					<div class="col-md-8 col-md-offset-2">
-						<p style="font-size:20px; text-transform:capitalize; text-align:center; font-family:'Cambria'">
-							Here is the list Required To Register Any Missed Person.
-					  <ul style="font-size:20px; text-transform:capitalize; font-family:'Cambria'">
-							<li>Photo Of The Person</li>
-							<li>His Full Name</li>
-							<li>A physical description, including height, weight, age, hair color, eye color, build, etc</li>
-							<li>A description of the clothing and shoes the person was last seen wearing</li>
-							<li>A list of possessions the person might be carrying, such as jewelry, glasses, contact lenses, accessories</li>
-					  </ul>
-						</p>
+						<h4>
+							Here is the list Required To Register Any Missed Person in <b>Missingzone.PK</b>
+							<br><br><br>
+							<ul>
+								<li>Photo Of The Person</li>
+								<li>His Full Name</li>
+								<li>A physical description, including height, weight, age, hair color, eye color, build, etc</li>
+								<li>A description of the clothing and shoes the person was last seen wearing</li>
+								<li>A list of possessions the person might be carrying, such as jewelry, glasses, contact lenses, accessories</li>
+							</ul>
+						</h4>
 					</div>
 				</div>
 			</div>
 		</div>
 
-		<!--<div class="section section-basic">-->
-			<!--<div class="container">-->
-				<!--<div class="row">-->
-					<!--<div class="col-md-12 col-sm-12">-->
-						<!--<div class="section">-->
-							<!--<div class="container text-center">-->
-								<!--<div class="row">-->
-									<!--<div class="col-md-8 col-md-offset-2 text-center">-->
-										<!--<h4>-->
-											<!--this is dummy text detail this is dummy text detail this is dummy text detail-->
-											<!--this is dummy text detail this is dummy text detail this is dummy text detail-->
-											<!--this is dummy text detail this is dummy text detail this is dummy text detail-->
-										<!--</h4>-->
-									<!--</div>-->
-								<!--</div>-->
-							<!--</div>-->
-						<!--</div>-->
-					<!--</div>-->
-				<!--</div>-->
-			<!--</div>-->
-		<!--</div>-->
-
-<<<<<<< HEAD:src/main.html
-		<div id="signup" class="section section-full-screen section-signup" style="background-image: url('../assets/img/city.jpg'); background-size: cover; background-position: top center; min-height: 700px;">
-			<div  class="container">
-=======
 		<div class="section section-full-screen section-signup" style="background-image: url('../../assets/img/city.jpg'); background-size: cover; background-position: top center; min-height: 700px;">
 			<div class="container">
->>>>>>> 0860dc7791dd310e6fd3ebabe14bb13177cb6001:src/components/main.html
 				<div class="row">
-					<div class="col-md-4 col-md-offset-4" >
-						<div class="card card-signup" style="width:350px; height:400px;">
+					<div class="col-md-4 col-md-offset-4">
+						<div class="card card-signup">
 							<form class="form" method="" action="">
-								<div  class="header header-primary text-center">
+								<div class="header header-primary text-center">
 									<!--<i class="material-icons">group</i>-->
 									<h4>
-										Let's Start Finding Your Love One <br>
-										Today!
+										Let's start finding your Love One <br>
+										today!
 									</h4>
 								</div>
 								<div class="content">
@@ -174,8 +142,9 @@
 									</div> -->
 								</div>
 								<div class="footer text-center">
-									<a href="javascript:" class="btn btn-primary""">Get Started</a>
+									<a href="javascript:" class="btn btn-primary">Get Started</a>
 								</div>
+								<br>
 							</form>
 						</div>
 
@@ -184,12 +153,12 @@
 			</div>
 		</div>
 	</div>
-    <footer class="footer">
-	    <div class="container">
-	        <div class="copyright pull-right">
-	            &copy; 2017, made by HumayunArain.
-	        </div>
-	    </div>
+	<footer class="footer">
+		<div class="container">
+			<div class="copyright pull-right">
+				&copy; 2017, made by HumayunArain.
+			</div>
+		</div>
 	</footer>
 </div>
 
@@ -218,33 +187,33 @@
 
 
 </body>
-	<!--   Core JS Files   -->
-	<script src="../../assets/js/jquery.min.js" type="text/javascript"></script>
-	<script src="../../assets/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="../../assets/js/material.min.js"></script>
+<!--   Core JS Files   -->
+<script src="../../assets/js/jquery.min.js" type="text/javascript"></script>
+<script src="../../assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="../../assets/js/material.min.js"></script>
 
-	<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-	<script src="../../assets/js/nouislider.min.js" type="text/javascript"></script>
+<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+<script src="../../assets/js/nouislider.min.js" type="text/javascript"></script>
 
-	<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-	<script src="../../assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
+<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
+<script src="../../assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
 
-	<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-	<script src="../../assets/js/material-kit.js" type="text/javascript"></script>
+<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+<script src="../../assets/js/material-kit.js" type="text/javascript"></script>
 
-	<script type="text/javascript">
+<script type="text/javascript">
 
-		$().ready(function(){
-			// the body of this function is in ./assets/material-kit.js
-			materialKit.initSliders();
-            window_width = $(window).width();
+	$().ready(function(){
+		// the body of this function is in ./assets/material-kit.js
+		materialKit.initSliders();
+		window_width = $(window).width();
 
-            if (window_width >= 992){
-                big_image = $('.wrapper > .header');
+		if (window_width >= 992){
+			big_image = $('.wrapper > .header');
 
-				$(window).on('scroll', materialKitDemo.checkScrollForParallax);
-			}
+			$(window).on('scroll', materialKitDemo.checkScrollForParallax);
+		}
 
-		});
-	</script>
+	});
+</script>
 </html>
