--- a/src/components/register.html
+++ b/src/components/register.html
@@ -45,17 +45,53 @@
 </head>
 
 <body>
+<!-- Navbar -->
+<nav class="navbar navbar-fixed-top " >
+	<div class="container">
+        <div class="navbar-header" >
+	    	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-index">
+	        	<span class="sr-only">Toggle navigation</span>
+	        	<span class="icon-bar"></span>
+	        	<span class="icon-bar"></span>
+	        	<span class="icon-bar"></span>
+	    	</button>
+	    	<a href="main.html">
+	        	<div class="logo-container" >
+	                <div class="brand" >
+						<b style="font-size:20px; color:#fff; ">Missingzone</b>
+	                </div>
+				</div>
+	      	</a>
+	    </div>
 
+	    <div class="collapse navbar-collapse" id="navigation-index">
+	    	<ul class="nav navbar-nav navbar-right">
+				<li>
+					<a href="#area" >
+						<i class="material-icons">search</i> <b>Find One</b>
+					</a>
+				</li>
+				<li>
+					<a href="http://demos.creative-tim.com/material-kit-pro/presentation.html?ref=utp-freebie" target="_blank">
+						<i class="material-icons">person</i>  Register your Missing One
+					</a>
+				</li>
+	    	</ul>
+	    </div>
+	</div>
+</nav>
+<!-- End Navbar -->
 <div class="signup-page">
-	<div class="wrapper">
+	<div class="wrapper" >
 		<div class="header header-filter" style="background-image: url('../../assets/img/city.jpg'); background-size: cover; background-position: top center;">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
-						<div class="card card-signup">
+					<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3" style="width:500px;
+                    margin-left:220px;">
+						<div class="card card-signup" >
 							<form class="form" method="" action="">
 								<div class="header header-primary text-center">
-									<h4>Register Any Missed Person</h4>
+									<h4 style=" font-size:25px;">Register Any Missed Person</h4>
 								</div>
 								<div class="content">
 									<div class="avatar-upload img-raised img-circle">
@@ -64,7 +100,7 @@
 
 									<input type="text" class="form-control" placeholder="Full Name...">
 
-									<input type="text" class="form-control" placeholder="Religion...">
+									<input type="text" class="form-control" placeholder="Information...">
 
 									<div class="form-group label-static">
 										<label class="control-label">missing date</label>
